[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sieve"
version = "0.1.0"
description = "Signal filter for ATHENA knowledge ingestion"
requires-python = ">=3.10"
dependencies = [
    "trafilatura>=1.8",
]

[project.scripts]
sieve = "sieve.cli:main"

[project.optional-dependencies]
api = ["anthropic>=0.40"]
fetch = ["scrapling[fetchers]"]
simple = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
all = ["anthropic>=0.40", "scrapling[fetchers]", "httpx>=0.27", "mcp>=1.0"]
